--- a/app/src/main/res/layout/item_horoscope.xml
+++ b/app/src/main/res/layout/item_horoscope.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="16dp">
     
     <ImageView
         android:id="@+id/ivHoroscope"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,9 +21,12 @@
         android:id="@+id/tvHoroscopeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/accent"
+        android:textSize="25sp"
         app:layout_constraintTop_toBottomOf="@+id/ivHoroscope"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        tools:text="hola"
         />
 
 
